--- a/app/templates/doctor/patient/patient.html
+++ b/app/templates/doctor/patient/patient.html
@@ -75,7 +75,6 @@
                     <th>GENDER</th>
                     <th>AGE</th>
                     <th>CONTACT NUMBER</th>
-                    <th>RECORD</th>
                     <th>ACTION</th>
                 </tr>
             </thead>
@@ -88,26 +87,27 @@
                     <td>{{ patient[4] }}</td>
                     <td>{{ patient[18] }}</td>
                     <td>
-                        <!-- VIEW RECORD -->
-                        <form method="GET" action="/doctor/patient_record/">
-                            <div class="delete-icon">
-                                <input id="patient_id" name="patient_id" value="{{ patient[0] }}" type="hidden">
-                                <button type="submit" style="background: none; border: none;">
-                                    <img src="{{ url_for('static', filename='images/Folder.png') }}" title="Patient Record">
-                                </button>
-                            </div>
-                        </form> 
-                    </td>
-                    <td>
-                        <!-- DELETE RECORD -->
-                        <form id="deleteForm_{{ patient[0] }}" method="POST" action="/doctor/delete_patient/">
-                            <div class="delete-icon">
-                                <input id="patient_id" name="patient_id" value="{{ patient[0] }}" type="hidden">
-                                <button type="button" onclick="confirmation('{{ patient[0] }}')" style="background: none; border: none;">
-                                    <img src="{{ url_for('static', filename='images/Delete.png') }}" title="Delete Record">
-                                </button>
-                            </div>
-                        </form> 
+                        <div class="action-icon-container">
+                            <!-- VIEW RECORD -->
+                            <form method="GET" action="/doctor/patient_record/">
+                                <div class="delete-icon">
+                                    <input id="patient_id" name="patient_id" value="{{ patient[0] }}" type="hidden">
+                                    <button type="submit" style="background: none; border: none;">
+                                        <img src="{{ url_for('static', filename='images/Folder.png') }}" title="Patient Record">
+                                    </button>
+                                </div>
+                            </form> 
+
+                            <!-- DELETE RECORD -->
+                            <form id="deleteForm_{{ patient[0] }}" method="POST" action="/doctor/delete_patient/">
+                                <div class="delete-icon">
+                                    <input id="patient_id" name="patient_id" value="{{ patient[0] }}" type="hidden">
+                                    <button type="button" onclick="confirmation('{{ patient[0] }}')" style="background: none; border: none;">
+                                        <img src="{{ url_for('static', filename='images/Delete.png') }}" title="Delete Record">
+                                    </button>
+                                </div>
+                            </form> 
+                        </div>
                     </td>
                 </tr>   
                 {% endfor %}
