--- a/app/static/admin_style.css
+++ b/app/static/admin_style.css
@@ -29,16 +29,16 @@
 .user-header p {
     position: absolute;
     top: 20px;
-    left: 110px;
+    left: 120px;
     font-weight: 900;
     font-size: 18px;
 }
 
 .user-table {
     width: 91%;
-    position: relative; 
-    top: 20px; 
-    left: 110px;
+    position: absolute; 
+    top: 90px; 
+    right: 35px;
     line-height: 1.5;
     color: var(--darkBlue);
     background-color: white;
