--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -159,7 +159,7 @@ ul li p {
     height: 50px; 
     overflow: hidden;
     margin-bottom: 20px;
-    margin-top: 100%;
+    margin-top: 20%;
 }
 
 .sidenav-user-bg:hover {
@@ -198,7 +198,7 @@ ul li p {
     position: absolute;
     display: flex;
     top: 190px;
-    left: 110px;
+    left: 120px;
     color: var(--darkBlue);
 }
 
@@ -237,7 +237,7 @@ ul li p {
 /* -------------------------------------------- ADD ICONS -------------------------------------------- */
 .add-icon img {
     width: 40px;
-    right: 70px;
+    right: 50px;
     top: 10px;
     justify-content: flex-end;
     border-radius: 100%;
@@ -253,16 +253,16 @@ ul li p {
 .patient-header p {
     position: absolute;
     top: 20px;
-    left: 110px;
+    left: 120px;
     font-weight: 900;
     font-size: 18px;
 }
 
 .patient-table {
     width: 91%;
-    position: relative; 
-    top: 20px; 
-    left: 110px;
+    position: absolute; 
+    top: 90px; 
+    right: 35px;
     line-height: 1.5;
     color: var(--darkBlue);
     background-color: white;
