--- a/app/templates/doctor/patient/lab_results.html
+++ b/app/templates/doctor/patient/lab_results.html
@@ -35,6 +35,12 @@
                     <p>Appointment</p>
                 </li>
             </a>
+            <a href="{{ url_for('doctor.schedule') }}">
+                <li class="icon-bg">
+                    <img src="{{ url_for('static', filename='images/Schedule.png') }}"> 
+                    <p>Schedule</p>
+                </li>
+            </a>
             <li class="selected-icon-bg">
                 <img src="{{ url_for('static', filename='images/Patient Record.png') }}"> 
                 <p>Patient</p>
