--- a/app/templates/admin/user_management/add_user.html
+++ b/app/templates/admin/user_management/add_user.html
@@ -77,7 +77,7 @@
 
                 <div class="u_row secondRow">
                     <div class="inputBox username">
-                        <input type="text" required="required" name="username" autocomplete="off">
+                        <input type="text" name="username" autocomplete="off">
                         <span>Username</span>
                     </div>
 
@@ -96,7 +96,7 @@
                 <div class="u_row thirdRow">
                     
                     <div class="inputBox password">
-                        <input type="text" required="required" name="password" autocomplete="off">
+                        <input type="text" required="required" name="password" autocomplete="off" value="{{ password }}" readonly>
                         <span>Password</span>
                     </div>
 
