--- a/app/templates/admin/user_management/add_user.html
+++ b/app/templates/admin/user_management/add_user.html
@@ -81,6 +81,21 @@
                         <span>Username</span>
                     </div>
 
+                    <div class="inputBox password">
+                        <input type="text" required="required" name="password" autocomplete="off" value="{{ password }}" readonly>
+                        <span>Password</span>
+                    </div>
+                    
+                    
+                </div>
+
+                <div class="u_row thirdRow">
+                    
+                    <div class="inputBox email">
+                        <input type="text" name="email" autocomplete="off">
+                        <span>Email</span>
+                    </div>
+
                     <div class="inputBox gender">
                         <span>Gender</span>
                         <select class="gender" name="gender" required="required">
@@ -90,16 +105,6 @@
                         </select>
                     </div>
                     
-                    
-                </div>
-
-                <div class="u_row thirdRow">
-                    
-                    <div class="inputBox password">
-                        <input type="text" required="required" name="password" autocomplete="off" value="{{ password }}" readonly>
-                        <span>Password</span>
-                    </div>
-
                     <div class="inputBox user_role">
                         <span>User Role</span>
                         <select class="user_role" name="user_role" required="required">
