--- a/app/templates/admin/user_management/user_management.html
+++ b/app/templates/admin/user_management/user_management.html
@@ -57,6 +57,7 @@
                     <th>FIRST NAME</th>
                     <th>MIDDLE NAME</th>
                     <th>LAST NAME</th>
+                    <th>EMAIL</th>
                     <th>GENDER</th>
                     <th>USER ROLE</th>
                     <th>ACTION</th>
@@ -70,6 +71,7 @@
                     <td>{{ user.first_name }}</td>
                     <td>{{ user.middle_name }}</td>
                     <td>{{ user.last_name }}</td>
+                    <td>{{ user.email }}</td>
                     <td>{{ user.gender }}</td>
                     <td>{{ user.user_role }}</td>
                     <td>
